Fix: Article formatting on smaller devices.

--- a/src/core/static/core/css/components/_post.scss
+++ b/src/core/static/core/css/components/_post.scss
@@ -55,6 +55,9 @@
 
     .post-references {
 
+        hyphens: auto;
+        word-break: break-all;
+
       h1 {
           color: var(--clr-primary-400);
       }
@@ -72,7 +75,6 @@
     }
 
     p {
-        text-align: justify;
         margin: 20px 0;
     }
 
